--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
           content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Responsive Design</title>
     <link rel='stylesheet' href='styles.css'/>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   </head>
   <body>
       <div class='page'>
-        <div class='section menu'></div>
+        <div class='section menu'>CS260 - Daniel's Responsive Design</div>
         <div class='section header'>
           <img src='images/header.svg'/>
         </div>
